src/content/docs/zh/sdk/flutter/v5/features/attribution.mdx
---
title: "获取归因信息"
description: "使用 Adjust SDK 监听归因变化"
slug: "en/sdk/flutter/features/attribution"
versions:
   - label: "v5"
     value: "v5"
     default: true
   - label: "v4"
     value: "v4"
redirects:
   v4: "/en/sdk/flutter/v4/features/attribution"
---

用户与 Adjust 链接交互时，其归因信息会发生更新。用户与[深度链接](https://help.adjust.com/en/article/deep-links)交互时可能会发生这种情况。用户归因相关信息会在 `AdjustAttribution` 类中展现。

## AdjustAttribution 类属性\{\#adjustattribution\-class\-properties\}

`AdjustAttribution` 类包含设备当前归因状态的细节。任何未针对用户填充的值都会返回 `null` 值。

<callout type="note">

只有在[您的 `AdjustConfig` 实例 `isCostDataInAttributionEnabled` 属性](/en/sdk/flutter/configuration#enable-cost-data-sending)为 `true` 的情况下，才能访问下列值：

-  `costType`
-  `costAmount`
-  `costCurrency`

</Callout>

| 值                  | 数据类型 | 描述                                                                                          |
| ------------------- | -------- | --------------------------------------------------------------------------------------------- |
| `trackerToken`      | `String` | 设备当前归因链接的识别码                                                                      |
| `trackerName`       | `String` | 设备当前归因链接的名称                                                                        |
| `network`           | `String` | 设备当前归因渠道的名称                                                                        |
| `campaign`          | `String` | 设备当前归因推广活动的名称                                                                    |
| `adgroup`           | `String` | 设备当前归因广告组的名称                                                                      |
| `creative`          | `String` | 设备当前归因素材的名称                                                                        |
| `clickLabel`        | `String` | 用于标记安装的[点击标签](https://help.adjust.com/en/article/user-rewards)                     |
| `costType`          | `String` | 推广活动定价模型 \(如 cpi\)                                                                   |
| `costAmount`        | `num`    | 安装成本                                                                                      |
| `costCurrency`      | `String` | 与成本关联的货币的 [3 字符 ISO 4217 代码](https://www.iban.com/currency-codes)。              |
| `fbInstallReferrer` | `String` | [Facebook install referrer](https://developers.facebook.com/docs/app-ads/install-referrer/)， |

## 发生归因变化时触发函数\{\#trigger\-a\-function\-when\-attribution\-changes\}

<codeblock title="属性声明">

```dart
typedef void AttributionCallback(AdjustAttribution attributionData);
AttributionCallback? attributionCallback;

```

</CodeBlock>

SDK 可监听归因变更并在发现更新时调用一个函数。要配置您的回传函数，请将函数指定到 config 实例的 `attributionCallback` 属性上。

<callout type="important">

您必须在应用中初始化 Adjust SDK **之前** 调用`attributionCallback`方法。

</Callout>

```dart
AdjustConfig adjustConfig = new AdjustConfig(yourAppToken, environment);
config.attributionCallback = (AdjustAttribution attributionChangedData) {
   print('[Adjust]: Attribution changed!');

   if (attributionChangedData.trackerToken != null) {
      print('[Adjust]: Tracker token: ' + attributionChangedData.trackerToken);
   }
   if (attributionChangedData.trackerName != null) {
      print('[Adjust]: Tracker name: ' + attributionChangedData.trackerName);
   }
   if (attributionChangedData.campaign != null) {
      print('[Adjust]: Campaign: ' + attributionChangedData.campaign);
   }
   if (attributionChangedData.network != null) {
      print('[Adjust]: Network: ' + attributionChangedData.network);
   }
   if (attributionChangedData.creative != null) {
      print('[Adjust]: Creative: ' + attributionChangedData.creative);
   }
   if (attributionChangedData.adgroup != null) {
      print('[Adjust]: Adgroup: ' + attributionChangedData.adgroup);
   }
   if (attributionChangedData.clickLabel != null) {
      print('[Adjust]: Click label: ' + attributionChangedData.clickLabel);
   }
};
Adjust.initSdk(adjustConfig);
```

## 获取当前归因信息\{\#get\-current\-attribution\-information\}

<codeblock title="方法签名">

```dart
static Future<adjustattribution id="sl-md0000000"> getAttribution() async
```

</CodeBlock>

用户安装您的应用时，Adjust 会将该安装归因至一个推广活动。Adjust SDK 可提供赢得安装归因的推广活动细节。要返回此信息，请调用`getAttribution`方法，以`AdjustAttribution`对象的形式返回归因信息。

```dart
Adjust.getAttribution().then((attribution) {
  // process attribution
});
```
